fixed overlapping modal on current collection

--- a/react-app/src/components/Collection/css/CreateCollection.css
+++ b/react-app/src/components/Collection/css/CreateCollection.css
@@ -2,12 +2,20 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 23vh;
+	width: 10vw;
+	height: 10vh;
 	/* background: white; */
 	background: #ffd166;
 	margin: 0 auto;
 	border-radius: 10px;
 	text-align: center;
+}
+
+@media screen and (max-height: 1350px) {
+	.create-collection-form {
+		width: 15vw;
+		height: 13vh;
+	}
 }
 
 .collection-form label {
